@@ -1,3 +1,8 @@
+2013-12-21  Mark Wielaard  <mjw@redhat.com>
+
+	* frame_unwind.c (handle_cfi): Track whether the return register
+	has been set and only allow it to be set once.
+
 2013-12-20  Mark Wielaard  <mjw@redhat.com>
 
 	* dwfl_frame.c (one_arg): New struct.
